--- a/src/style.css
+++ b/src/style.css
@@ -2,3 +2,71 @@
     padding: 0;
     margin: 0;
 }
+
+html,
+body{
+    overflow: hidden;
+}
+
+.loading-bar{
+    position: absolute;
+    background: #ffffff;
+    top: 50%;
+    width: 100%;
+    height: 2px;
+    transform: scale(0);
+    transform-origin: top left;
+    transition: transform 0.5s;
+}
+
+.loading-bar.ended{
+    transform: scale(0);
+    transform-origin: top right;
+    transition: transform 1.0s ease;
+}
+
+.point{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+}
+
+.point:hover .text{
+    opacity: 1;
+    transition: opacity 0.3s;
+}
+
+.point.visible .label{
+    transform: scale(1, 1);
+}
+
+.point .label{
+    position: absolute;
+    top: -20px;
+    left: -20px;
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    background: #00000077;
+    color: #ffffff;
+    font-family: 'Courier New', Courier, monospace;
+    line-height: 30px;
+    text-align: center;
+    cursor: pointer;
+    transform: scale(0, 0);
+    transition: transform 0.3s;
+}
+
+.point .text{
+    position: absolute;
+    width: 400px;
+    border-radius: 7px;
+    text-align: center;
+    padding: 7px;
+    background: #00000077;
+    color: #ffffff;
+    font-family: 'Courier New', Courier, monospace;
+    line-height: 1.3em;
+    opacity: 0;
+    pointer-events: none;
+}
